Simulation/log/build_2023-11-23_09-23-27/arm_pkg/stdout_stderr.log
running egg_info
writing ../../build/arm_pkg/arm_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/arm_pkg/arm_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/arm_pkg/arm_pkg.egg-info/entry_points.txt
writing requirements to ../../build/arm_pkg/arm_pkg.egg-info/requires.txt
writing top-level names to ../../build/arm_pkg/arm_pkg.egg-info/top_level.txt
reading manifest file '../../build/arm_pkg/arm_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/arm_pkg/arm_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying arm_pkg/tests/joint_controller.py -> /home/chi8kyu/tfg/rwork/build/arm_pkg/build/lib/arm_pkg/tests
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/chi8kyu/tfg/rwork/build/arm_pkg/build/lib/arm_pkg/tests/joint_controller.py -> /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg/tests
byte-compiling /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg/distributed.py to distributed.cpython-310.pyc
  File "/home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg/distributed.py", line 2
    import JointStateListener from joint_listener.py
                              ^^^^
SyntaxError: invalid syntax

byte-compiling /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg/tests/joint_controller.py to joint_controller.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/arm_pkg/arm_pkg.egg-info to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/python3.10/site-packages/arm_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing controller script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing ddpg script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing gripper_test script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing listener script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing processor script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing reset_controller script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing reward_function script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing robots_state script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing sac script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing state_test script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing storage script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
Installing training script to /home/chi8kyu/tfg/rwork/install/arm_pkg/lib/arm_pkg
writing list of installed files to '/home/chi8kyu/tfg/rwork/build/arm_pkg/install.log'
